InternexDev_Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Sold_Box__c</fullName>
        <label>Sold Box</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Fax__c</fullName>
        <label>Sold Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Phone__c</fullName>
        <label>Sold Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_City__c</fullName>
        <label>Sold To City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Country_Desc__c</fullName>
        <label>Sold To Country Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Country__c</fullName>
        <label>Sold To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_State_Desc__c</fullName>
        <label>Sold To State Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_State__c</fullName>
        <label>Sold To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Zip__c</fullName>
        <label>Sold To Zip</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Brand__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Forecast__c</fullName>
        <label>System Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Advance__c</fullName>
        <label>Total Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Applied__c</fullName>
        <label>Total Applied</label>
        <summarizedField>akritiv__Payment__c.akritiv__Applied_Amount__c</summarizedField>
        <summaryForeignKey>akritiv__Payment__c.akritiv__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cheques_Bounced__c</fullName>
        <label>Total Cheques Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ultimate_Credit_Number__c</fullName>
        <label>Ultimate Credit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Forecast__c</fullName>
        <label>User Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Form_Risk_Le__c</fullName>
        <label>VAT Form Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>A - Excellent Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Good Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Average Risky Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Very Risky Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X60_DPD__c</fullName>
        <formula>( akritiv__Age3__c +  akritiv__Age4__c +  akritiv_Age5__c +  akritiv_Age6__c )/   akritiv__Base_Total_AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% &gt;60 DPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X90_DPD__c</fullName>
        <formula>( akritiv__Age4__c +  akritiv_Age5__c +  akritiv_Age6__c )/  akritiv__Base_Total_AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% &gt; 90 DPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <formula>Brand__r.ZIP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv_Age5__c</fullName>
        <label>181-365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv_Age6__c</fullName>
        <label>Over 365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Account_Key__c</fullName>
        <defaultValue>TEXT(0)</defaultValue>
        <externalId>true</externalId>
        <label>Account Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>akritiv__Account_Type__c</fullName>
        <label>Account Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Age0__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Age1__c</fullName>
        <label>1-30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Age2__c</fullName>
        <label>31-60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Aging_Risk__c</fullName>
        <formula>IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Oldest_Age_Range_1__c,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), 

IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Oldest_Age_Range_2__c ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) , 

IF(NULLVALUE(akritiv__Oldest_DPD__c,0) =0,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;, 16, 16 ) ,
IF( akritiv__Oldest_DPD__c  &lt;$Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Oldest_Age_Range_1__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), IF( akritiv__Oldest_DPD__c  &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Oldest_Age_Range_2__c , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 16, 16) ,  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16)  )) )

))</formula>
        <label>Oldest Age Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Amount_Over_Credit_Limit__c</fullName>
        <formula>akritiv__Total_AR__c -  akritiv__Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Over Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Auto_Dunning_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Dunning Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akritiv__Auto_Dunning_Error__c</fullName>
        <description>Auto Dunning Error</description>
        <label>Auto Dunning Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Auto_Dunning_Status__c</fullName>
        <label>Auto Dunning Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Dunning Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Avg_DPD_Risk__c</fullName>
        <formula>IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Avg_DPD_Range1__c  ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16),  

IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Avg_DPD_Range2__c  ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) , 

IF( IF(NULLVALUE(akritiv__DPD_Mean__c ,0)=0, 0,akritiv__DPD_Mean__c )=0,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), 
IF(akritiv__DPD_Mean__c  &lt;  $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Avg_DPD_Range1__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), IF( akritiv__DPD_Mean__c  &lt;  $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Avg_DPD_Range2__c , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 16, 16) , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16) )) )  

 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg DPD Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Base_Total_AR__c</fullName>
        <label>Base Total AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Base_Total_Past_Due__c</fullName>
        <label>Base Total Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Batch_Number__c</fullName>
        <label>Batch #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Bill_To_Number__c</fullName>
        <label>Bill To#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Bucket_Links__c</fullName>
        <formula>HYPERLINK( &quot; /&quot;+Id+&quot;?tabsel=2&amp;bucket=0&quot; , &quot;Current&quot; , &quot;_self&quot;) &amp; &quot; | &quot; &amp; HYPERLINK( &quot; /&quot;+Id+&quot;?tabsel=2&amp;bucket=1&quot;, &quot;1-&quot;+ TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age1__c ), &quot;_self&quot;) &amp; &quot; | &quot; &amp; HYPERLINK( &quot; /&quot;+Id+&quot;?tabsel=2&amp;bucket=2&quot;, TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age1__c+1 )+&quot;-&quot;+ TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age2__c ) , &quot;_self&quot;) &amp; &quot; | &quot; &amp; HYPERLINK( &quot; /&quot;+Id+&quot;?tabsel=2&amp;bucket=3&quot;, TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age2__c+1 )+ &quot;-&quot; + TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age3__c ), &quot;_self&quot;) &amp; &quot; | &quot; &amp; HYPERLINK( &quot; /&quot;+Id+&quot;?tabsel=2&amp;bucket=4&quot;, TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age3__c+1 )+ &quot;-&quot;+TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age4__c ), &quot;_self&quot;) &amp; &quot; | &quot; &amp; HYPERLINK( &quot; /&quot;+Id+&quot;?tabsel=2&amp;bucket=5&quot;,
 &quot;Over &quot; + TEXT( $Setup.akritiv__BucketConfig_Singlec__c.akritiv__Age4__c ) , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bucket Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Collections_Confidence__c</fullName>
        <formula>IF(NULLVALUE(akritiv__Rating_Count__c,0)==0,&quot;No Rating&quot;, 
CASE(ROUND(akritiv__Rating_Sum__c / akritiv__Rating_Count__c, 0),
1, IMAGE(&quot;/img/samples/stars_100.gif&quot;,&quot;Poor&quot;),
2, IMAGE(&quot;/img/samples/stars_200.gif&quot;,&quot;Fair&quot;),
3, IMAGE(&quot;/img/samples/stars_300.gif&quot;,&quot;Good&quot;),
4, IMAGE(&quot;/img/samples/stars_400.gif&quot;,&quot;Great&quot;),
5, IMAGE(&quot;/img/samples/stars_500.gif&quot;,&quot;Excellent&quot;),
IMAGE(&quot;/img/samples/stars_000.gif&quot;,&quot;Poor&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Contact_Risk__c</fullName>
        <formula>IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Contact_Risk_Range1__c ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), 

IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Contact_Risk_Range2__c ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) , 

IF(ISNULL(akritiv__Last_Contact_Date__c ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16),
IF(Today() - akritiv__Last_Contact_Date__c  &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Contact_Risk_Range1__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), IF( Today() - akritiv__Last_Contact_Date__c   &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Contact_Risk_Range2__c, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 16, 16) ,  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16)  )) )

))</formula>
        <label>Contact Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Credit_Remaining__c</fullName>
        <formula>akritiv__Credit_Limit__c - akritiv__Total_AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Credit_Risk__c</fullName>
        <formula>IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Credit_Range1__c  ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16),  
IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Credit_Range2__c   ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) , 

IF(NULLVALUE( akritiv__Credit_Limit__c,0) = 0 , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16), 
IF( (akritiv__Total_AR__c / akritiv__Credit_Limit__c)*100 &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Credit_Range1__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), 
IF( (akritiv__Total_AR__c / akritiv__Credit_Limit__c)*100 &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Credit_Range2__c  , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 16, 16), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16) 
)))

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Credit_Utilization__c</fullName>
        <description>Green Yellow Red bar for credit utlization</description>
        <formula>IF( akritiv__Total_AR__c &gt;=0 , 


IF( NULLVALUE(akritiv__Credit_Limit__c,0)=0 ,

	 IMAGE($Setup.akritiv__SysConfig_Singlec__c.akritiv__IconsetURL__c+&quot;/gray.gif&quot;,&quot;&quot;,16,1), 
	 IF( akritiv__Total_AR__c/akritiv__Credit_Limit__c &lt;= 1.0, 
			IMAGE($Setup.akritiv__SysConfig_Singlec__c.akritiv__IconsetURL__c+&quot;/gray.gif&quot;, &quot;&quot;, 16,FLOOR(akritiv__Total_AR__c/akritiv__Credit_Limit__c*80))&amp;IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 16, FLOOR(80 - akritiv__Total_AR__c/akritiv__Credit_Limit__c*80))&amp;IMAGE(&quot;/s.gif&quot;, &quot;&quot;, 16, 80),
			IF( akritiv__Total_AR__c/akritiv__Credit_Limit__c &gt; 1.0, 
				IMAGE($Setup.akritiv__SysConfig_Singlec__c.akritiv__IconsetURL__c+&quot;/gray.gif&quot;, &quot;&quot;, 16, 80)&amp;IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;&quot;, 16, MIN(FLOOR(akritiv__Total_AR__c/akritiv__Credit_Limit__c*80-80),80))&amp;IMAGE($Setup.akritiv__SysConfig_Singlec__c.akritiv__IconsetURL__c+&quot;/gray.gif&quot;, &quot;&quot;, 16, FLOOR(160-akritiv__Total_AR__c/akritiv__Credit_Limit__c*80)),
				&apos;&apos;
			)
     )
 )
 
 , 
 
 
 IF( NULLVALUE(akritiv__Credit_Limit__c,0)=0 ,

	 IMAGE($Setup.akritiv__SysConfig_Singlec__c.akritiv__IconsetURL__c+&quot;/gray.gif&quot;,&quot;&quot;,16,1), 
	 
	 IMAGE($Setup.akritiv__SysConfig_Singlec__c.akritiv__IconsetURL__c+&quot;/gray.gif&quot;, &quot;&quot;, 16,FLOOR(0/akritiv__Credit_Limit__c*80))&amp;IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 16, FLOOR(0/akritiv__Credit_Limit__c*80))&amp;IMAGE(&quot;/s.gif&quot;, &quot;&quot;, 16, 80)
			
     )
 
 
 )</formula>
        <label>Credit Utilization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__DPD_Mean__c</fullName>
        <label>Average DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__DPD_Std_Dev__c</fullName>
        <label>Variance in DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__DPD__c</fullName>
        <description>Days Past Due</description>
        <label>Account DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Daily_Notes__c</fullName>
        <label>Latest Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>akritiv__Days_Since_Contact__c</fullName>
        <formula>(Today() -  akritiv__Last_Contact_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Dunning_Error_Fix_URL__c</fullName>
        <description>Dunning_Error_Fix_URL</description>
        <label>Dunning_Error_Fix_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>akritiv__High_Past_Due_Bal__c</fullName>
        <formula>akritiv__High_Past_Due_Tx__r.akritiv__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Past Due Bal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__High_Past_Due_DPD__c</fullName>
        <formula>TODAY() -  akritiv__High_Past_Due_Tx__r.akritiv__Due_Date__c</formula>
        <label>Highest Past Due DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__High_Past_Due_Date__c</fullName>
        <formula>akritiv__High_Past_Due_Tx__r.akritiv__Due_Date__c</formula>
        <label>Highest Past Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akritiv__High_Past_Due_Risk__c</fullName>
        <formula>IF(ISNULL($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__High_Past_Due_Range1__c), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), 

IF(ISNULL($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__High_Past_Due_Range2__c ), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) , 

IF(NULLVALUE(akritiv__High_Past_Due_Bal__c,0) = 0 ,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16),
IF( akritiv__High_Past_Due_Bal__c  &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__High_Past_Due_Range1__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), IF( akritiv__High_Past_Due_Bal__c  &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__High_Past_Due_Range2__c , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 16, 16) ,  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16)  )) )

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Past Due Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__High_Past_Due_Tx__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High Past Due Inv</label>
        <referenceTo>akritiv__Transaction__c</referenceTo>
        <relationshipLabel>Accounts (High_Past_Due_Tx)</relationshipLabel>
        <relationshipName>High_Past_Due_Tx_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>akritiv__Initial_Credit_App__c</fullName>
        <label>Initial Credit App</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akritiv__Last_Contact_Method__c</fullName>
        <label>Last Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Last_Contact_Type__c</fullName>
        <label>Last Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promise To Pay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Last_Credit_Review_Date__c</fullName>
        <label>Last Credit Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akritiv__Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Last_Payment_Received__c</fullName>
        <label>Last Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akritiv__Lead_Tx__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oldest Invoice</label>
        <referenceTo>akritiv__Transaction__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Lead_Tx_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>akritiv__Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic (Egypt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Jordan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Kuwait)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Lebanon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Saudi Arabia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (United Arab Emirates)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian (Armenia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian (Bulgaria)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan (Spain,Euro)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan (Spain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Hong Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Taiwan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian (Croatia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech (Czech Republic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish (Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Belgium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Netherlands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Suriname)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Barbados)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Bermuda)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Ghana)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Net_Collectible__c</fullName>
        <formula>akritiv__Total_AR__c - akritiv__Age0__c -akritiv__Total_Disputed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Collectible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Note_Date__c</fullName>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akritiv__Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>akritiv__Oldest_Bal__c</fullName>
        <formula>akritiv__Lead_Tx__r.akritiv__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oldest Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Oldest_DPD__c</fullName>
        <formula>akritiv__Lead_Tx__r.akritiv__Days_Past_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oldest Invoice DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Oldest_Due_Date__c</fullName>
        <formula>akritiv__Lead_Tx__r.akritiv__Due_Date__c</formula>
        <label>Oldest Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_1_30__c</fullName>
        <label>PC [1-30]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_31_60__c</fullName>
        <label>PC [31-60]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_61_90__c</fullName>
        <label>PC [61-90]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_Current__c</fullName>
        <label>PC [Current]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_Over_180__c</fullName>
        <label>PC [Over 180]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_Total_AR_Local__c</fullName>
        <label>PC [Total AR (Local)]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__PC_Total_Past_Due_Local__c</fullName>
        <label>PC [Total Past Due (Local)]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>akritiv__Percent_Credit_Utilized__c</fullName>
        <formula>IF(NULLVALUE(akritiv__Credit_Limit__c,0)=0, 0, akritiv__Total_AR__c/akritiv__Credit_Limit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Credit Utilized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>akritiv__Percent_Disputed_Risk__c</fullName>
        <formula>IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Percent_Disputed_Range1__c ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), 

IF(NULLVALUE($Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Percent_Disputed_Range2__c ,0)=0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) , 

IF(NULLVALUE(akritiv__Percent_Disputed__c,0) =0,IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16) ,
IF( akritiv__Percent_Disputed__c   * 100 &lt; $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Percent_Disputed_Range1__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 16, 16), IF( akritiv__Percent_Disputed__c  * 100 &lt;  $Setup.akritiv__Risk_Configuration_Singlec__c.akritiv__Percent_Disputed_Range2__c  , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 16, 16) ,  IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 16, 16)  )) )

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Disputed Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Percent_Disputed__c</fullName>
        <formula>IF(NULLVALUE(akritiv__Total_AR__c,0)=0, 0, if(NULLVALUE(akritiv__Total_Disputed__c,0)=0 ,0 ,akritiv__Total_Disputed__c / akritiv__Total_AR__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Disputed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>akritiv__Rating_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of rating related activities for the account.</description>
        <label>Rating Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Rating_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of all the ratings for the account</description>
        <label>Rating Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akritiv__Source__c</fullName>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Sticky_Note_Level__c</fullName>
        <label>Sticky Note Level</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Sticky_Note__c</fullName>
        <defaultValue>&apos;Add Account Note&apos;</defaultValue>
        <label>Sticky Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>akritiv__Terms_Key__c</fullName>
        <label>Terms</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Token__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Token</label>
        <referenceTo>akritiv__PaymentToken__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>